logs/dag_id=weather_dag_api/run_id=manual__2023-04-26T19:02:39.931997+00:00/task_id=cities.insert_data_Kyiv/attempt=1.log
[2023-04-26T19:03:18.503+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kyiv manual__2023-04-26T19:02:39.931997+00:00 [queued]>
[2023-04-26T19:03:18.761+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kyiv manual__2023-04-26T19:02:39.931997+00:00 [queued]>
[2023-04-26T19:03:18.766+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T19:03:18.769+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-26T19:03:18.771+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T19:03:18.861+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Kyiv> on 2023-04-26 19:02:39.931997+00:00
[2023-04-26T19:03:18.884+0000] {standard_task_runner.py:55} INFO - Started process 2703 to run task
[2023-04-26T19:03:18.922+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Kyiv', 'manual__2023-04-26T19:02:39.931997+00:00', '--job-id', '547', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpl9g7hsj4']
[2023-04-26T19:03:18.926+0000] {standard_task_runner.py:83} INFO - Job 547: Subtask cities.insert_data_Kyiv
[2023-04-26T19:03:19.417+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Kyiv manual__2023-04-26T19:02:39.931997+00:00 [running]> on host b46a99c748bd
[2023-04-26T19:03:20.290+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Kyiv
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T19:02:39.931997+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-26T19:02:39.931997+00:00
[2023-04-26T19:03:20.292+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull(f'cities.process_data_{location}'[1])})
[2023-04-26T19:03:20.404+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T19:03:22.929+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T19:03:22.938+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull(f'cities.process_data_{location}'[1])}), parameters: None
[2023-04-26T19:03:22.955+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 1: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull(f'citi...
                                                ^

[2023-04-26T19:03:22.990+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Kyiv, execution_date=20230426T190239, start_date=20230426T190318, end_date=20230426T190322
[2023-04-26T19:03:23.114+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 547 for task cities.insert_data_Kyiv (syntax error at or near "{"
LINE 1: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull(f'citi...
                                                ^
; 2703)
[2023-04-26T19:03:23.193+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-26T19:03:23.252+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
